--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
